test/resources/valid/com/boothj5/jarchexample/application/address/facade/AddressFacade.java
package com.boothj5.jarchexample.application.address.facade;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.address.service.AddressService;
