test/resources/invalid/com/boothj5/jarchexample/application/address/controller/AddressController.java
package com.boothj5.jarchexample.application.address.controller;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.address.facade.AddressFacade;
